--- a/css/design.css
+++ b/css/design.css
@@ -1,27 +1,37 @@
 .Login
 {
     background-color: grey;
-    height: 200px;
-    width: 100%;
+    height: 100px;
+    width: 79%;
     text-align: center;
     border: 1px solid black;
+    float:right;
+}
+.Picture{
     float:left;
+    width: 19%;
 }
-
-#signup{
-
-}
-
 .header{
-    background-color: hotpink;
+    background-color:grey;
     float:left;
     width: 100%;
+    position: fixed;
+    top: 0;
 }
 
 #picture{
     float:left;
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    padding: 5px;
 }
 
 #linkList{
     float:left;
+}
+
+#canvas{
+    float: left;
+    position: relative;
 }
