--- a/css/design.css
+++ b/css/design.css
@@ -33,3 +33,44 @@
 #canvas{
     float: left;
 }
+
+#createAcct{
+    background-color: lightgrey;
+    float: left;
+    padding: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%
+}
+
+.d-block{
+    display: block;
+}
+
+#signupButton{
+    display: block;
+    margin: auto;
+    
+}
+
+#signup{
+    color: #333;
+    margin: auto;
+    text-align: center;
+    padding-bottom: 5px;
+}
+
+#signupbody{
+    background-color: darkgrey;
+}
+body{
+    height:100%;
+}
+
+#footer{
+    background-color: grey;
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    height:2.5rem;
+}
